...
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:id="@+id/homeFragment"
    tools:context=".HomePageFragment"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.08"
...
        android:layout_margin="10dp">

        <SearchView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:id="@+id/searchView"
            android:queryHint="Recipe name"
            android:iconifiedByDefault="false"
            tools:ignore="NestedWeights" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/moreFilterTextView"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="more filters"
            android:textSize="10sp"
            tools:ignore="HardcodedText,KeyboardInaccessibleWidget,TouchTargetSizeCheck" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="0"
        android:visibility="gone"
        tools:visibility="visible">

        <Button
            android:id="@+id/btnAllergy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/allergy"
...
            app:layout_constraintEnd_toStartOf="@+id/guideline4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ButtonStyle,NestedWeights,SmallSp,TouchTargetSizeCheck" />

        <Button
            android:id="@+id/btnDiet"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/diet"
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ButtonStyle,SmallSp,TouchTargetSizeCheck" />

        <Button
            android:id="@+id/btnCuisine"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/cuisineTypes"
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toBottomOf="@+id/btnDiet"
            tools:ignore="ButtonStyle,SmallSp,TouchTargetSizeCheck" />

        <CheckBox
            android:id="@+id/btnFridge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/filterMyFridge"
...
        android:id="@+id/recipeListLinearLayout"
        android:orientation="vertical"
        >
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/rand_recipe_recyclerView"
            android:layout_margin="4dp"/>
    </LinearLayout>

</LinearLayout>

