<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#DACFCF"
    android:fitsSystemWindows="true"
    android:pointerIcon="hand"
    tools:context=".MainActivity">
...
            android:id="@+id/scrollview"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            tools:ignore="MissingConstraints">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/filterLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <Button
                    android:id="@+id/timingBtn"
                    android:layout_width="150dp"
                    android:layout_height="32dp"
                    android:layout_marginTop="4dp"
                    android:background="@color/buttonColor"
                    android:foreground="@android:drawable/btn_dropdown"
                    app:iconPadding="0dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/prepTimeLabel"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                <Button
                    android:id="@+id/allergyBtn"
                    android:layout_width="150dp"
                    android:layout_height="32dp"
                    android:layout_marginStart="16dp"
                    android:background="@color/buttonColor"
                    android:foreground="@android:drawable/btn_dropdown"
                    app:layout_constraintStart_toEndOf="@+id/cuisineBtn"
                    app:layout_constraintTop_toBottomOf="@+id/allergyLabel"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                <Button
                    android:id="@+id/dietBtn"
                    android:layout_width="150dp"
                    android:layout_height="32dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="4dp"
                    android:background="@color/buttonColor"
                    android:foreground="@android:drawable/btn_dropdown"
...
                    android:foreground="@android:drawable/btn_dropdown"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cuisineLabel"
                    tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck,DuplicateClickableBoundsCheck" />

                <Button
                    android:id="@+id/filterBtn"
                    android:layout_width="67dp"

                    android:layout_height="60dp"
                    android:layout_marginTop="70dp"
                    android:layout_marginEnd="16dp"
                    android:background="@color/buttonColor"
...
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/nav_header_menu"
...
