<ScrollView
    android:id="@+id/shoppingCartFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

...
                android:layout_marginEnd="8dp"
                android:text="Add" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/shoppingList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="15dp" />

        <LinearLayout
...
